--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
         .headtd {
             text-align: right;
-            font-weight: bold;
             color: #787878;
+        }
+        .value{
+            font-weight: bold;
+
         }
 
         tr {
@@ -47,47 +50,47 @@
                             <tr>
                                 <td class="headtd">层次</td>
                                 <td>：</td>
-                                <td>{{stutype}}</td>
+                                <td class="value">{{stutype}}</td>
                             </tr>
                             <tr>
                                 <td class="headtd">单位</td>
                                 <td>：</td>
-                                <td>{{institute}}</td>
+                                <td class="value">{{institute}}</td>
                             </tr>
                             <tr>
                                 <td class="headtd">院系</td>
                                 <td>：</td>
-                                <td>{{department}}</td>
+                                <td class="value">{{department}}</td>
                             </tr>
                             <tr>
                                 <td class="headtd">专业</td>
                                 <td>：</td>
-                                <td>{{major}}</td>
+                                <td class="value">{{major}}</td>
                             </tr>
                             <tr>
                                 <td class="headtd">学习方式</td>
                                 <td>：</td>
-                                <td>{{studytype}}</td>
+                                <td class="value">{{studytype}}</td>
                             </tr>
                             <tr>
                                 <td class="headtd">研究方向</td>
                                 <td>：</td>
-                                <td>{{direction}}</td>
+                                <td class="value">{{direction}}</td>
                             </tr>
                             <tr>
                                 <td class="headtd">导师</td>
                                 <td>：</td>
-                                <td>{{boss}}</td>
+                                <td class="value">{{boss}}</td>
                             </tr>
                             <tr>
                                 <td class="headtd">专项计划类型</td>
                                 <td>：</td>
-                                <td>{{var1}}</td>
+                                <td class="value">{{var1}}</td>
                             </tr>
                             <tr>
                                 <td class="headtd">就业类型</td>
                                 <td>：</td>
-                                <td>{{var2}}</td>
+                                <td class="value">{{var2}}</td>
                             </tr>
                         </table>
                     </div>
@@ -95,16 +98,16 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title"
-                            style="color: #989259;font-weight:bold;text-shadow: 1px 1px 1px #dccd40;">
+                            style="color: #989259;font-weight:bold;text-shadow: 1px 1px 1px #e9d9a7;; opacity: 0.9;">
                             待录取通知
-                            <small style="color: #7c7c7c;font-weight:initial;text-shadow: initial;font-size: 13px;">
+                            <small style="color: #7c7c7c;font-weight:initial;text-shadow: initial;font-size: 13px;; opacity: 0.7;">
                                 接受或拒绝待录取通知后，将无法更改
                             </small>
                         </h3>
 
                     </div>
                     <div class="panel-body">
-                        <div style="padding-bottom: 10px;">
+                        <div style="padding-bottom: 10px;; opacity: 0.7">
                             <small style="font-size: 13px;">
                                 {{office}}
                                 <small style="font-size: 12px;">
@@ -114,12 +117,25 @@
                         </div>
                         <div style="width:90%;margin:0 auto;height: 100px;background-color: #E3F0F8;padding: 10px;">
                             <div style="margin-bottom: 12px;"><span
-                                    style="font-size: 13px;font-weight: bold;color: #787878;">请及时接受待录取通知。</span></div>
+                                    style="font-size: 13px;font-weight: bold;color: #787878;">同学， 你好:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;恭喜你被录取位{{institute}}2025级别推荐免试硕士研究生， 请确认。</span></div>
 
-                            <div style="background-color: #CACCD0;margin: 0 auto;width:fit-content;height: 40px;text-align: center;padding-left: 15px;padding-right: 15px;">
-                                <span style="line-height: 40px;font-size: 15px;color:#198e2b;font-weight:bold;">您于{{acc_time}}接受了{{institute}}的待录取通知</span>
-                            </div>
-                        </div>
+                     
+                            <!-- <div style="display: flex; align-items: center; background-color: #f2f3f5; border: 1px solid #e1f3d8; border-radius: 4px; padding: 0px 12px; margin: 5px 120px; max-width: fit-content;width: 400px;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" style="margin-right: 8px;">
+                                    <circle cx="12" cy="12" r="11" fill="#67C23A"/>
+                                    <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z" fill="white"/>
+                                </svg>
+                                <span style="font-size: 14px; color: #3d8532;">您于9月29日 10:02接受了浙江大学的待录取通知</span>
+                            </div> -->
+                            <div style="display: flex; justify-content: center; width: 100%;">
+                                <div style="display: inline-flex; align-items: center; background-color: #f2f3f5; border-radius: 4px; padding: 4px 16px; margin: 0px 0; max-width: calc(100% - 20px); box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" style="margin-right: 8px; flex-shrink: 0;">
+                                    <circle cx="12" cy="12" r="10" fill="#377d24"/>
+                                    <path d="M10 15.2L6.8 12l-1.4 1.4L10 18 18 10l-1.4-1.4L10 15.2z" fill="white"/>
+                                  </svg>
+                                  <span style="font-size: 14px; color:#377d24; line-height: 1.4; word-break: break-word;">你于{{acc_time}}接受了{{institute}}的待录取通知</span>
+                                </div>
+                              </div>
                     </div>
                 </div>
             </div>
@@ -193,6 +209,27 @@
                             <input type="text" v-model="var2" />
                         </td>
                     </tr>
+                    <tr>
+                        <td class="headtd">办公室</td>
+                        <td>：</td>
+                        <td>
+                            <input type="text" v-model="office" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="headtd">报到时间</td>
+                        <td>：</td>
+                        <td>
+                            <input type="text" v-model="enrolltime" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="headtd">接收时间</td>
+                        <td>：</td>
+                        <td>
+                            <input type="text" v-model="acc_time" />
+                        </td>
+                    </tr>
                 </table>
             </div>
             <div class="col-md-4"></div>
@@ -204,19 +241,19 @@
     var app = new Vue({
         el: '#app',
         data: {
-            stutype: 'XXX',
-            institute: '清华大学',
-            department: 'XXXX',
-            major: 'XXXXXX',
-            studytype: '全日制',
-            direction: 'XXXXXX',
-            boss: 'XXX',
-            var1: '非专项计划',
-            var2: '非定向就业',
-            office: "XXXXXX",
-            enrolltime: "XXXXXX",
-            acc_time: "XXXXX"
-        }
+    stutype: '硕士',
+    institute: '西安电子科技大学',
+    department: '计算机科学与技术学院',
+    major: '计算机科学与技术',
+    studytype: '全日制',
+    direction: '计算材料学',
+    boss: '导师组',
+    var1: '学术学位',
+    var2: '非定向就业',
+    office: "计算机科学与技术学院研究生办公室",
+    enrolltime: "研究生院 2024-09-28 10:30",
+    acc_time: "9月28日 10:45"
+}
     })
 </script>
 </html>
