--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     major: '计算机科学与技术',
     studytype: '全日制',
     direction: '计算材料学',
-    boss: '导师组',
+    boss: '不区分导师',
     var1: '学术学位',
     var2: '非定向就业',
     office: "计算机科学与技术学院研究生办公室",
