--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                     <circle cx="12" cy="12" r="10" fill="#377d24"/>
                                     <path d="M10 15.2L6.8 12l-1.4 1.4L10 18 18 10l-1.4-1.4L10 15.2z" fill="white"/>
                                   </svg>
-                                  <span style="font-size: 14px; color:#377d24; line-height: 1.4; word-break: break-word;">你于{{acc_time}}接受了{{institute}}的待录取通知</span>
+                                  <span style="font-size: 14px;              font-weight: bold; color:#377d24; line-height: 1.4; word-break: break-word;">你于{{acc_time}}接受了{{institute}}的待录取通知</span>
                                 </div>
                               </div>
                     </div>
@@ -258,8 +258,8 @@
     var1: '学术学位',
     var2: '非定向就业',
     office: "计算机科学与技术学院研究生办公室",
-    enrolltime: "研究生院 2024-09-28 10:30",
-    acc_time: "9月28日 10:45",
+    enrolltime: "研究生院 2024-09-29 10:30",
+    acc_time: "9月29日 10:45",
     type:"硕士"
 }
     })
